--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,10 +21,10 @@
             <h1 id="question">Welcome To The Coding Quiz Game!</h1>
             <br>
             <div id="answers"><h2>Click on the correct answers before the time (60 seconds) runs out. If you answer incorrectly, 10 seconds
-                will be deducted from your remaining time. Please press start to begin.</h2><br>
+                will be deducted from your remaining time. Please press start to begin.</h2><br></div>
             <div id="result">
                 <hr/>
-                <button id="startButton">Start</button><p> </p>
+                <button id="startButton">Start</button><p>
             </div>
         </div>
     </main>
