changes and tweaks

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,6 +31,10 @@
         <div id="result">
           <button id="startButton">Start</button>
       </div>
+      <form id="form">
+          <label input type="text"></label>
+
+      </form>
     </main>
     <script src="Assets/js/script.js"></script>
   </body>
