--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,7 +32,7 @@
           <button id="startButton">Start</button>
       </div>
       <form id="form">
-          <label input type="text"></label>
+          <label ></label>
 
       </form>
     </main>
