final upload with fixes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,9 +32,9 @@
           <button id="startButton">Start</button>
       </div>
       <form id="form">
-          <label ></label>
-
+        <input id="hsInitials" type="text" maxlength="3"></input>
       </form>
+      <button id="hsButton">Submit</button>
     </main>
     <script src="Assets/js/script.js"></script>
   </body>
